--- a/public/style.css
+++ b/public/style.css
@@ -59,21 +59,28 @@ input[type=text]:active, input[type=text]:focus {
 }
 
 button.delete-btn {
-	width: 100%;
 	color: var(--primary, red);
 	align-self: baseline;
 }
 
 
-button.delete-btn .material-symbols-outlined {
-	font-size: 18px;
+.files-container {
+	display: flex;
+	gap: 24px;
+	justify-content: left;
+	align-items: top;
+	flex-wrap: wrap;
 }
 
+.files-container>.item {
+	min-width: 150px;
+	max-width: 180px;
+}
 
-.files-container {
-	display: grid;
-	grid-template-columns: repeat(10, minmax(150px, 1fr));
-	gap: 24px;
+.files-container .actionsContainer {
+	display: flex;
+	justify-content: space-between;
+	padding: 0 20px;
 }
 
 @media screen and (max-width: 1440px) {
