--- a/public/style.css
+++ b/public/style.css
@@ -46,7 +46,7 @@ form button[type=submit] {
 	border-radius: 8px;
 }
 
-input[type=text] {
+input[type=text], input[type=password] {
 	font-size: 20px;
 	height: 26px;
 	padding: 2px;
@@ -74,7 +74,7 @@ button.delete-btn {
 
 .files-container>.item {
 	min-width: 150px;
-	max-width: 180px;
+	max-width: 150px;
 }
 
 .files-container .actionsContainer {
